# mcts-llm

./: README.md  pyproject.toml
datasets/: AIME_Dataset_1983_2024.csv
results/: AIME_2024.md  AIME_2024_llama_3_8b.csv
src/: dataset_utils.py
src/mcts_llm/: llm.py  mctsr.py  prompt_configs.py
