[project]
name = "mcts-llm"
version = "0.1.0"
description = "An implementation of MCTS + Self-Refine + Self-Evaluation"
authors = [{ name = "brendangraham14" }]
dependencies = [
    "notebook>=7.2.1",
    "openai>=1.34.0",
    "anthropic>=0.28.1",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "tabulate>=0.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }
